--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,12 @@ include_directories (${CMAKE_CURRENT_SOURCE_DIR})
 
 set(CMAKE_C_FLAGS "-Wall")
 include_directories(${LIBUSB_1_INCLUDE_DIRS})
-LIST(APPEND SRC core.c tilt.c cameras.c usb_libusb10.c)
+
+#IF(WINDOWS)
+LIST(APPEND SRC core.c tilt.c cameras.c usb_libusb_win32.c)
+#ELSE(WINDOWS)
+#LIST(APPEND SRC core.c tilt.c cameras.c usb_libusb10.c)
+#ENDIF(WINDOWS)
 
 add_library (freenect SHARED ${SRC})
 set_target_properties ( freenect PROPERTIES
