--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@
 include_directories (${CMAKE_CURRENT_SOURCE_DIR})
 
 set(CMAKE_C_FLAGS "-Wall")
+
 include_directories(${LIBUSB_1_INCLUDE_DIRS})
 
 #IF(WINDOWS)
@@ -13,12 +14,12 @@ LIST(APPEND SRC core.c tilt.c cameras.c usb_libusb_win32.c)
 #LIST(APPEND SRC core.c tilt.c cameras.c usb_libusb10.c)
 #ENDIF(WINDOWS)
 
-add_library (freenect SHARED ${SRC})
-set_target_properties ( freenect PROPERTIES
-  VERSION ${PROJECT_VER}
-  SOVERSION ${PROJECT_APIVER})	
-install (TARGETS freenect
-  DESTINATION "${PROJECT_LIBRARY_INSTALL_DIR}")
+# add_library (freenect SHARED ${SRC})
+# set_target_properties ( freenect PROPERTIES
+#   VERSION ${PROJECT_VER}
+#   SOVERSION ${PROJECT_APIVER})	
+# install (TARGETS freenect
+#   DESTINATION "${PROJECT_LIBRARY_INSTALL_DIR}")
 
 add_library (freenectstatic STATIC ${SRC})
 set_target_properties (freenectstatic PROPERTIES OUTPUT_NAME freenect)
@@ -28,8 +29,8 @@ ENDIF()
 install (TARGETS freenectstatic
   DESTINATION "${PROJECT_LIBRARY_INSTALL_DIR}")
 
-target_link_libraries (freenect ${LIBUSB_1_LIBRARIES})
-target_link_libraries (freenectstatic ${LIBUSB_1_LIBRARIES})
+# target_link_libraries (freenect ${LIBUSB_LIBRARIES})
+target_link_libraries (freenectstatic ${LIBUSB_LIBRARIES})
 
 # Install the header file
 install (FILES "../include/libfreenect.h" "../include/libfreenect.hpp"
