Small tweaks. Depth works on Win32 with mingw. Video is still having trouble.
Signed-off-by: Joshua Blake <joshblake@gmail.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,6 +23,7 @@ install (TARGETS freenect
 
 add_library (freenectstatic STATIC ${SRC})
 set_target_properties (freenectstatic PROPERTIES OUTPUT_NAME freenect)
+  SET_TARGET_PROPERTIES (freenect PROPERTIES COMPILE_FLAGS "-g")
 IF(UNIX AND NOT APPLE)
   SET_TARGET_PROPERTIES (freenectstatic PROPERTIES COMPILE_FLAGS "-fPIC")
 ENDIF()
