Last of the win32 libfreenect testing. Video is very flakey.
Signed-off-by: Joshua Blake <joshblake@gmail.com>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -13,6 +13,7 @@ else()
   find_package(Threads REQUIRED)
   find_package(OpenGL REQUIRED)
   find_package(GLUT REQUIRED)
+  SET_TARGET_PROPERTIES (glview PROPERTIES COMPILE_FLAGS "-g")
   include_directories(${OPENGL_INCLUDE_DIRS} ${GLUT_INCLUDE_DIRS} ${USB_INCLUDE_DIRS})
   if (WIN32)
     target_link_libraries(glview freenect ${OPENGL_LIBRARIES} glut32 ${CMAKE_THREAD_LIBS_INIT} m)
