--- a/src-win/glview/glview.vcxproj
+++ b/src-win/glview/glview.vcxproj
@@ -10,6 +10,9 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\examples\glview.c" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{984817A5-5C47-4D0D-B695-1B7CA9F5F731}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
@@ -39,8 +42,9 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\data\projects\kinect\org\libfreenect2\wrappers\win32;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\data\projects\kinect\org\libfreenect2\wrappers\win32\Debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>../../include;$(IncludePath)</IncludePath>
+    <LibraryPath>../bin;$(LibraryPath)</LibraryPath>
+    <OutDir>$(SolutionDir)\bin\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -53,6 +57,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <CompileAs>CompileAsCpp</CompileAs>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -77,9 +82,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="glview.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
