Rebased on master and updated libfreenect-win32.cpp to implement latest libfreenect.h. Compiles, but still need to implement newer methods in core cpp files.
Signed-off-by: Joshua Blake <joshblake@gmail.com>

--- a/src-win/Freenect-MinimalSample/Freenect-MinimalSample.vcxproj
+++ b/src-win/Freenect-MinimalSample/Freenect-MinimalSample.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{D94F0026-7BD7-43CA-ADAE-5C24C32DE973}</ProjectGuid>
     <RootNamespace>FreenectMinimalSample</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <ProjectName>libfreenect-MinimalSample</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
