--- a/src-win/Kinect.vcxproj
+++ b/src-win/Kinect.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{2F8E5D55-38DF-4B88-9DE0-14D9AEE07D47}</ProjectGuid>
     <RootNamespace>Kinect</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <ProjectName>libfreenect</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
