Testing against OpenNI backend. CMakeFiles need fixed up.
Signed-off-by: Joshua Blake <joshblake@gmail.com>

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,8 +1,8 @@
 ######################################################################################
 # Packages needed for examples
 ######################################################################################
-
-add_executable(glview glview.c)
+set(CMAKE_C_FLAGS "-Wall -g")
+add_executable(glview glview.cpp)
 
 # Mac just has everything already
 if(APPLE)
