--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,12 +4,15 @@
 
 include_directories (${CMAKE_CURRENT_SOURCE_DIR})
 
-set(CMAKE_C_FLAGS "-Wall")
+set(CMAKE_C_FLAGS "-Wall -g")
 
 include_directories(${LIBUSB_1_INCLUDE_DIRS})
 
 IF(WIN32)
-  LIST(APPEND SRC core.c tilt.c cameras.c usb_libusb_win32.c)
+  include_directories ("C:/data/projects/openni/OpenNI/Include")
+ # include_directories ("C:/data/projects/openni/OpenNI/Source/OpenNI/Win32")
+ # include_directories ("C:/data/projects/openni/OpenNI/Platform/Win32/Driver/Build/sys")
+  LIST(APPEND SRC core.c tilt.c cameras.c usb_openni.cpp)
 ELSE(WIN32)
   LIST(APPEND SRC core.c tilt.c cameras.c usb_libusb10.c)
 ENDIF(WIN32)
@@ -29,6 +32,9 @@ IF(UNIX AND NOT APPLE)
 ENDIF()
 install (TARGETS freenectstatic
   DESTINATION "${PROJECT_LIBRARY_INSTALL_DIR}")
+
+target_link_libraries (freenect "C:/data/projects/openni/OpenNI/Platform/Win32/Lib/Debug/openNI.lib")
+target_link_libraries (freenectstatic "C:/data/projects/openni/OpenNI/Platform/Win32/Lib/Debug/openNI.lib")
 
 target_link_libraries (freenect ${LIBUSB_LIBRARIES})
 target_link_libraries (freenectstatic ${LIBUSB_LIBRARIES})
