Fixed up Cmake to look for OpenNI
Signed-off-by: Joshua Blake <joshblake@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,14 +68,13 @@ include (FindOS)
 include (SetupDirectories)
 
 # Find packages needed to build library
-IF(UNIX AND NOT MINGW)
+IF(WIN32)
+  find_package(openni REQUIRED)
+  include_directories(${OPENNI_INCLUDE_DIRS})
+ELSE()
   find_package(libusb-1.0 REQUIRED)
   # libfreenect.h includes libusb.h, so everyone needs this too
   include_directories(${LIBUSB_1_INCLUDE_DIRS})
-ELSE()
-  find_package(libusb REQUIRED)
-  # libfreenect.h includes libusb.h, so everyone needs this too
-  include_directories(${LIBUSB_INCLUDE_DIRS})
 ENDIF()
 
 
