--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ set(CMAKE_C_FLAGS "-Wall")
 IF(WIN32)
   include_directories (${OPENNI_INCLUDE_DIRS})
   LIST(APPEND SRC core.c tilt.c cameras.c usb_openni.cpp)
+  set_source_files_properties(${SRC} PROPERTIES LANGUAGE CXX)
 ELSE(WIN32)
   include_directories(${LIBUSB_1_INCLUDE_DIRS})
   LIST(APPEND SRC core.c tilt.c cameras.c usb_libusb10.c)
